--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
       <td>overlook</td>
       <td>195</td>
     </tr>
-    <tr>
+      <tr>
       <td>2</td>
+      <td>ginger</td>
+      <td>109</td>
+    </tr>
+    <tr>
+      <td>3</td>
       <td>goonerestic</td>
       <td>104</td>
     </tr>
